Added warning about Path Lookup API change.

--- a/docs/releases/release_notes/5.0.md
+++ b/docs/releases/release_notes/5.0.md
@@ -1,6 +1,6 @@
 # IP Fabric v5.0
 
-## v5.0.0 (Jul 19th, 2022)
+## v5.0.0 (19th Jul, 2022)
 
 ```shell
 OVA SHA256: ac8a7e68f97b53e299ce3eecac6bd4ddc56c2c025b1ae48d95fbad925213a7bd
@@ -69,6 +69,13 @@ QCOW MD5: 0204de624001d1dfe8067e68f11ef3c5
     run a new snapshot and check the data again. Please raise a support ticket
     if you still experience problems.
 
+!!! important "Path Lookup API Change"
+
+    A new required parameter `enableRegions` has been added to the Path Lookup API for Unicast and Multicast.
+    If set to `false` it will ignore the values in the `srcRegions` and `dstRegions` parameters.
+
+    `enableRegions [mandatory] - boolean - (default false)`
+
 ### **UPGRADE NOTICES**
 
 - This upgrade requires IP Fabric to be on `v4.4.3` prior to upgrade to `v5.0.0`. IP Fabric `v4.4.2` or lower will not work -– please upgrade to `4.4.3` using the normal method before carrying out the `5.0.0` upgrade process.
@@ -124,7 +131,7 @@ osadmin@ipfabric:~$ tail -f /var/log/nimpee/dist_upgrade.log
 - DNS
     - DNS Basic configuration
     - DNS Resolver configuration
-    - DHCP servers and relays
+- DHCP servers and relays
 - Extreme ACL support
 - RSVP neighbors & interfaces
 - IPv4 and IPv6 Tunnels Table
