Change release version to 5.0.1

--- a/docs/releases/release_notes/5.0.md
+++ b/docs/releases/release_notes/5.0.md
@@ -1,6 +1,33 @@
 # IP Fabric v5.0
 
-## v5.0.0 (19th Jul, 2022)
+## v5.0.1 (Aug 08th, 2022)
+
+```shell
+# ipfabric-5-0-1+10.ova
+OVA SHA256: 6ec97dde3bc7b4eae424799838a99453d759adf14ef42f20039fc89cd0c2eb49
+OVA MD5: 4624340f1f6c515db0946b859944558e
+# ipfabric-5-0-1+10.qcow2
+QCOW SHA256: 7539bbaf7eb6c8f7c5e0c72517210e49feec0bb2ae9cca68bb900321d56d2996
+QCOW MD5: 04fed50a120a49bf1b610b39096b1051
+# ipfabric-update-5_0_1+10.tar.gz.sig
+TAR SHA256: edbf3cfa8c0628b39682a952f61d62ba7b3ea9176c5f36edd1b93decee501047
+TAR MD5: 0f79000974e0e5c60590e161785a1067
+```
+
+!!! warning "Read All Upgrade Notices"
+
+    Please read all v5.0.0 UPGRADE NOTICES, WARNINGS, and IMPORTANT messages prior to beginning installation.
+    This upgrade requires IP Fabric to be on `v4.4.3` or greater prior to upgrading to `v5.0.1`.
+
+### Bug Fixes
+
+- `v5.0.0` was unpublished as a race condition in Palo Alto discovery was reported; this has been fixed in `v5.0.1`.
+
+### Features
+
+- Checkpoint `Management Data Plane Separation (MDPS)` if enabled is now supported in IP Fabric for discovery
+
+## v5.0.0 (Jul 19th, 2022)
 
 ```shell
 OVA SHA256: ac8a7e68f97b53e299ce3eecac6bd4ddc56c2c025b1ae48d95fbad925213a7bd
@@ -12,7 +39,7 @@ QCOW MD5: 0204de624001d1dfe8067e68f11ef3c5
 !!! warning "Read All Upgrade Notices"
 
     Please read all UPGRADE NOTICES, WARNINGS, and IMPORTANT messages prior to beginning installation.
-    This upgrade requires IP Fabric to be on `v4.4.3` prior to upgrade to `v5.0.0`.
+    This upgrade requires IP Fabric to be on `v4.4.3` prior to upgrading to `v5.0.0`.
 
 !!! warning "API Versioning"
 
@@ -51,7 +78,7 @@ QCOW MD5: 0204de624001d1dfe8067e68f11ef3c5
     The first phase of a new implementation of Role-Based Access Control is
     included in `5.0.0`. There is a known caveat where generation of API tokens
     does not take into account the new RBAC roles – this will be remedied in
-    `5.0.1`. If you are planning on using Roles and API Tokens it is
+    `5.0.0`. If you are planning on using Roles and API Tokens it is
     recommended to wait for the fix before assigning any user to the custom
     roles. If a user is in a custom Role they will not be able to create an API
     token until the next patch release.
