--- a/docs/releases/low-level_release_notes/5.x/5.0.x/5.0.1.md
+++ b/docs/releases/low-level_release_notes/5.x/5.0.x/5.0.1.md
@@ -1,6 +1,12 @@
 # LLRN 5.0.1
 
-These are low-level release notes for IP Fabric release `5.0.1`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand we believe, that it can provide a valuable information, if you are looking for particular detail. This release of IP Fabric contains total of 67 issues. And was internally released on 2022-08-02.
+These are low-level release notes for IP Fabric release `5.0.1`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand we believe, that it can provide a valuable information, if you are looking for particular detail. This release of IP Fabric contains total of 68 issues. And was internally released on 2022-08-02.
+
+## Epics
+
+Epics are high-level features, which may consist of many tasks.
+
+- [DOS-677](https://ipfabric.atlassian.net/browse/DOS-677) -- Medium -- release 5.0.1
 
 ## Bugs
 
