--- a/docs/releases/low-level_release_notes/5.x/5.0.x/5.0.1.md
+++ b/docs/releases/low-level_release_notes/5.x/5.0.x/5.0.1.md
@@ -1,6 +1,6 @@
 # LLRN 5.0.1
 
-These are low-level release notes for IP Fabric release `5.0.1`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand we believe, that it can provide a valuable information, if you are looking for particular detail. This release of IP Fabric contains total of 68 issues. And was internally released on 2022-08-02.
+These are low-level release notes for IP Fabric release `5.0.1`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand we believe, that it can provide a valuable information, if you are looking for particular detail. This release of IP Fabric contains total of 69 issues. And was internally released on 2022-08-02.
 
 ## Epics
 
@@ -61,6 +61,7 @@ A typical unit of work. They may be associated into Epics or Stories to form lar
 - [DOS-345](https://ipfabric.atlassian.net/browse/DOS-345) -- High -- Package API service as a debian package (kw: deb api pkg)
 - [DOS-393](https://ipfabric.atlassian.net/browse/DOS-393) -- Highest -- Update tooling for Debian 11 migration
 - [DOS-405](https://ipfabric.atlassian.net/browse/DOS-405) -- Medium -- Investigate posibility of directly updating to debian 11
+- [DOS-425](https://ipfabric.atlassian.net/browse/DOS-425) -- Medium -- Improve product nginx configuration from the security perspective (kw TLS1.2, 1.2)
 - [DOS-435](https://ipfabric.atlassian.net/browse/DOS-435) -- Highest -- Update image / update / dev build "scripts" (i.e. "devOps" scripts) to node 16 [waiting for devs to prepare sources for migration to node 16]
 - [DOS-466](https://ipfabric.atlassian.net/browse/DOS-466) -- Low -- Add sar archives to techsupport packing
 - [DOS-511](https://ipfabric.atlassian.net/browse/DOS-511) -- Highest -- create hetzner image for 5.0.x appliance on debian 11
