--- a/docs/releases/release_notes/5.0.md
+++ b/docs/releases/release_notes/5.0.md
@@ -1,5 +1,30 @@
 # IP Fabric v5.0
 
+## v5.0.2 (Sep 13th, 2022)
+
+```shell
+# ipfabric-update-5_0_2+5.tar.gz.sig
+TAR SHA256: 1dc0a59e2ec0993b9af2f7e26547caa791114ce5d49da32387effa00f11bbc95
+TAR MD5: 62518242728b95c08f5362ebcddec140
+```
+
+!!! warning "Read All Upgrade Notices"
+
+    Please read all v5.0.0 UPGRADE NOTICES, WARNINGS, and IMPORTANT messages prior to beginning installation.
+    This upgrade requires IP Fabric to be on `v4.4.3` or greater prior to upgrading to `v5.0.1`.
+
+### Bug Fixes
+
+- Juniper -- Device info task failed to read inventory data
+- Jumphost settings -- removing the username restriction
+- Vendors API -- Updated resources management when reading Versa SD-WAN
+- Configuration backup -- File download failed with large configuration files
+- Intent Calculation failed for complex ZoneFW policies
+
+### Features
+
+- FabricPath -- Add feature-set support for Cisco Nexus
+
 ## v5.0.1 (Aug 08th, 2022)
 
 ```shell
