--- a/docs/releases/release_notes/6.0.md
+++ b/docs/releases/release_notes/6.0.md
@@ -16,3 +16,4 @@ QCOW MD5: FIXME
 ### Network Discovery
 
 - Parallel command loading has been implemented for Cisco Meraki. This will significantly speed up discovery.
+- Vmware NSX-T -- Added support for E2E PathLookup with evaluation of DFW and Gateway Firewall Policies.
