Fix typo in the RN and added codename

--- a/docs/releases/release_notes/6.0.md
+++ b/docs/releases/release_notes/6.0.md
@@ -4,7 +4,7 @@
 
     This version has not been released yet and release notes are draft only.
 
-## v6.0.0 (UNRELEASED)
+## v6.0.0 codename Aertex (UNRELEASED)
 
 ```shell
 OVA SHA256: FIXME
@@ -16,4 +16,4 @@ QCOW MD5: FIXME
 ### Network Discovery
 
 - Parallel command loading has been implemented for Cisco Meraki. This will significantly speed up discovery.
-- Vmware NSX-T -- Added support for E2E PathLookup with evaluation of DFW and Gateway Firewall Policies.
+- VMware NSX-T -- Added support for E2E PathLookup with evaluation of DFW and Gateway Firewall Policies.
