NIM-8778 added release notes for fabricPath support.

--- a/docs/releases/release_notes/6.0.md
+++ b/docs/releases/release_notes/6.0.md
@@ -17,3 +17,4 @@ QCOW MD5: FIXME
 
 - Parallel command loading has been implemented for Cisco Meraki. This will significantly speed up discovery.
 - VMware NSX-T -- Added support for E2E PathLookup with evaluation of DFW and Gateway Firewall Policies.
+- Cisco -- Added support for collecting FabricPath data.
