--- a/docs/releases/release_notes/6.0.md
+++ b/docs/releases/release_notes/6.0.md
@@ -18,3 +18,5 @@ QCOW MD5: FIXME
 - Parallel command loading has been implemented for Cisco Meraki. This will significantly speed up discovery.
 - VMware NSX-T -- Added support for E2E PathLookup with evaluation of DFW and Gateway Firewall Policies.
 - Cisco -- Added support for collecting FabricPath data.
+- Discovery bandwidth limit can be set up to 100Mb/s in UI.
+- The number of discovery workers running in parallel can be tuned, please contact the IP Fabric support team.
