Codename is for the whole `6.0` release

--- a/docs/releases/release_notes/6.0.md
+++ b/docs/releases/release_notes/6.0.md
@@ -1,10 +1,10 @@
-# IP Fabric v6.0
+# IP Fabric v6.0 (Aertex)
 
 !!! warning
 
     This version has not been released yet and release notes are draft only.
 
-## v6.0.0 codename Aertex (UNRELEASED)
+## v6.0.0 (UNRELEASED)
 
 ```shell
 OVA SHA256: FIXME
