NIM-9113_RNupdate_routemapsAndPrefixLists

--- a/docs/releases/release_notes/6.0.md
+++ b/docs/releases/release_notes/6.0.md
@@ -20,3 +20,4 @@ QCOW MD5: FIXME
 - Cisco -- Added support for collecting FabricPath data.
 - Discovery bandwidth limit can be set up to 100Mb/s in UI.
 - The number of discovery workers running in parallel can be tuned, please contact the IP Fabric support team.
+- Cisco ASA, IOS, IOS-XE, NX-OS -- Added support for route maps and prefix-lists (IPv4 and IPv6)
