--- a/docs/releases/release_notes/previous_releases/IP_Fabric_v4.x.x/4.2.md
+++ b/docs/releases/release_notes/previous_releases/IP_Fabric_v4.x.x/4.2.md
@@ -62,7 +62,7 @@ OVA SHA256SUM: 8D773667434B4C27C9C199E84784312864E01C08D51DAA158B7C07C9B99BFD8F
   list.
 - Fortinet FortiGate - fixed missing zoneFw data for geography address
   objects and application profile data
-- Fortinet Fortigate - fixed transceiver value parsing.
+- Fortinet FortiGate - fixed transceiver value parsing.
 - HP Comware - fixed parsing of `display lldp neighbor-information verbose` command in case there are no neighbors
 - HP Comware - Fixed parsing of TwentyGigE interfaces.
 - HP Comware 5130 - AAA - fixed parsing of server parameters
