--- a/docs/releases/release_notes/previous_releases/IP_Fabric_v4.x.x/4.3.md
+++ b/docs/releases/release_notes/previous_releases/IP_Fabric_v4.x.x/4.3.md
@@ -306,7 +306,7 @@ OVA SHA256SUM: 3d07c8f1a51497eae671a43130cbf536b7e7bdf9ae6ba9030ebc50c981328119
 - Fortinet FortiGate - Added another parsing option of src-filter for
   command `show firewall VIP`.
 - Fortinet FortiGate - Fix parsing for command `show system ha`
-- Fortinet Fortigate - Fix parsing for the command `get router info bgp nei`
+- Fortinet FortiGate - Fix parsing for the command `get router info bgp nei`
 - Fortinet FortiGate - MAC address on link aggregation interfaces
   could be missing in some cases
 - HP 3Com - Fix device detection from `display version` command
