--- a/docs/releases/release_notes/previous_releases/IP_Fabric_v4.x.x/4.4.md
+++ b/docs/releases/release_notes/previous_releases/IP_Fabric_v4.x.x/4.4.md
@@ -53,7 +53,7 @@ OVA SHA256SUM: 68055EE2884256F2C7BC7AAE0C2C525C7E4779651FB404BC38EAFF76775A66D2
       - Cisco ASA with virtual contexts
       - Cisco WLC with system access point
       - Cisco NX-OS with VDC
-      - Fortigate with VDOM
+      - FortiGate with VDOM
 
     In 4.4.0 we are migrating device attributes that are necessary for manual site separation but we are not able to migrate snapshots from the older versions. Therefore sites in the older snapshots can be wrong if manual site separation was used. Also, if you compare a snapshot in a version higher or equal to 4.4.0 with a snapshot in a lower version than 4.4.0 that includes affected devices then you might encounter false-positive changes in the snapshot comparison.
 
@@ -97,7 +97,7 @@ OVA SHA256SUM: 68055EE2884256F2C7BC7AAE0C2C525C7E4779651FB404BC38EAFF76775A66D2
 - Loading a snapshot could sometimes cause an `Unexpected end of JSON input` error and then the snapshot will get corrupted. The root cause has been fixed.
 - Arista EOS -- Fixed false positive error emitting from `show interfaces vxlan 1`.
 - Azure -- fixed mapping of network interfaces without MAC address.
-- Brocade Fastiron -- Improved parsing hostname from prompt.
+- Brocade FastIron -- Improved parsing hostname from prompt.
 - Cisco -- fixed host table for devices reachable with LISP.
 - Cisco -- fixed parsing of PIDs containing plus symbol in command `show inventory`.
 - Cisco FTD -- `commands/cisco/routingTable` -- fixed parsing for null summarized routes.
@@ -111,7 +111,7 @@ OVA SHA256SUM: 68055EE2884256F2C7BC7AAE0C2C525C7E4779651FB404BC38EAFF76775A66D2
 - Extreme XOS -- fixed parsing of l2Interfaces of missing interfaces.
 - Fortinet FortiGate -- fixed executing of cmd `get system password-policy` on VDOM enabled firewalls.
 - Fortinet FortiGate -- Fixed missing FQDN in firewall policies unless configured in lower case.
-- Fortinet Fortigate -- fixed parsing of `get router info ospf nei detail` for NSSA cases.
+- Fortinet FortiGate -- fixed parsing of `get router info ospf nei detail` for NSSA cases.
 - HP Aruba switch -- added parsing of port information.
 - HP ArubaCX -- fixed parsing of IGMP query interval.
 - HP Comware -- fixed parsing of `display lldp neighbor-information verbose`
