--- a/docs/releases/release_notes/previous_releases/v3.x.x_ip_fabric.md
+++ b/docs/releases/release_notes/previous_releases/v3.x.x_ip_fabric.md
@@ -761,7 +761,7 @@ SHA256SUM: 8a3805704b6f4b126d960e3953749f936c67e635d94d387d86ddea6ecf4ea8fc
   - Cisco ACI, ASA, FTD, IOS, IOS-XE, IOS-XR, NX-OS, WLC
   - Arista EOS
   - Extreme XOS
-  - Fortinet Fortigate
+  - Fortinet FortiGate
   - HP Arubasw, Comware
   - Huawei VRP
   - Juniper JunOS
@@ -935,11 +935,11 @@ SHA256SUM: 8a3805704b6f4b126d960e3953749f936c67e635d94d387d86ddea6ecf4ea8fc
 - Extreme Voss - fixed parsing of different output for command "show
   ip vrf"
 - Fortinet FortiGate - fixed collecting device info
-- Fortinet Fortigate - Mac address mapping to aggregate and VLAN
-  interfaces (fixes path lookup L2 edge between switch and Fortigate)
-- Fortinet Fortigate - Prompt detection for VDOM with more than 11
+- Fortinet FortiGate - Mac address mapping to aggregate and VLAN
+  interfaces (fixes path lookup L2 edge between switch and FortiGate)
+- Fortinet FortiGate - Prompt detection for VDOM with more than 11
   characters fix
-- Fortinet Fortigate - Zone firewall fixes for load balancing VIP
+- Fortinet FortiGate - Zone firewall fixes for load balancing VIP
 - HP Aruba - fixed parsing of different output for command "show ap
   port status ap-name \<apName>"
 - HP Aruba - fixed parsing of different output for command "show lldp
@@ -1660,7 +1660,7 @@ Hyper-V SHA256SUM: 29E185591D87B327B50D791F8916C6FC08C399984C5AE392902E9EF6418
 - Extreme XOS - fixed mapping for L2 interfaces
 - Extreme XOS - fixed parsing of different output for command "show
   stpd detail"
-- Fortinet Fortigate - fixed parsing of different output for command
+- Fortinet FortiGate - fixed parsing of different output for command
   "diag netl agg name \<aggregate>"
 - F5 BigIP - fixed parsing of different output for command "show cm
   device"
@@ -1836,7 +1836,7 @@ SHA256SUM: 17d733e041c2726bc0dd74d88573f88525c0a3ba9cfbb65ad4faafe0de4ce7b0
 - Arista - BGP and ISIS support for non-vrf devices
 - Cisco ASA cluster auto-generated MAC starting with A2 - when IP is
   learned from ARP, it’s included to discovery.
-- Fortinet Fortigate - added verstion detection for fortigate with
+- Fortinet FortiGate - added verstion detection for FortiGate with
   Wifi module
 - Snapshot Management - Settings detail can be closed on ESC
 - Juniper JunOS - VRRP groups were assigned to wrong subinterface. Now
@@ -1906,12 +1906,12 @@ SHA256SUM: 17d733e041c2726bc0dd74d88573f88525c0a3ba9cfbb65ad4faafe0de4ce7b0
 - Extreme Enterasys - improved version detection
 - F5 BigIP - fixed parsing of different output for command "show sys
   hardware"
-- Fortigate - fixed missing VIP address objects in FortiGate policies
-- Fortinet Fortigate - fixed parsing of different output for command
+- FortiGate - fixed missing VIP address objects in FortiGate policies
+- Fortinet FortiGate - fixed parsing of different output for command
   "get router info ospf interface"
-- Fortinet Fortigate - fixed parsing of different output for command
+- Fortinet FortiGate - fixed parsing of different output for command
   "get router info vrrp"
-- Fortinet Fortigate - fixed parsing of different output for command
+- Fortinet FortiGate - fixed parsing of different output for command
   "show firewall policy"
 - HP ArubaSW - fixed parsing of different output for command "show
   trunks"
@@ -2380,7 +2380,7 @@ unloaded and loaded again.
 - Cisco IOS - Added Flexible flow support
 - Dell FTOS (ver 8 & 9 only) - add support for discovering
 - Dell PowerConnect - add support for discovering
-- Fortinet Fortigate - Added MAC address tables support on transparent
+- Fortinet FortiGate - Added MAC address tables support on transparent
   VDOMs and software switches
 - HP Aruba switch stacking support added
 
@@ -2483,11 +2483,11 @@ unloaded and loaded again.
 - F5 Big-IP - fixed parsing of different output for command "show sys
   hardware"
 - F5 Big-IP fixed get uptime from TMSH
-- Fortinet Fortigate - fixed parsing of different output for command
+- Fortinet FortiGate - fixed parsing of different output for command
   "diagnose sys ntp status" (IPv6 ntp sources)
-- Fortinet Fortigate - fixed parsing of different output for command
+- Fortinet FortiGate - fixed parsing of different output for command
   "show firewall policy"
-- Fortinet Fortigate - fixed parsing of different output for command
+- Fortinet FortiGate - fixed parsing of different output for command
   "show system interface"
 - HP Aruba switch - fixed parsing of different output for command
   "show tech buffers"
@@ -2951,7 +2951,7 @@ SHA256SUM: 138b25ae8b4b1b1f29b6e01a2e15d619a0eddfd610fcbaa042a22a9a8b80f0e0
 #### Features - Protocol and technology support
 
 - Added BGP support for Checkpoint Gaia, Cisco ASA, Extreme XOS,
-  Fortinet Fortigate, F5 Big-IP, Huawei VRP, Palo Alto
+  Fortinet FortiGate, F5 Big-IP, Huawei VRP, Palo Alto
 - Added ISIS support for Arista EOS, Cisco IOS / IOS-XE / IOS-XR,
   Extreme XOS, HP Comware, Huawei VRP
 - Added STP support for Extreme XOS
