Added OVA/QCOW hashes

--- a/docs/releases/release_notes/5.0.md
+++ b/docs/releases/release_notes/5.0.md
@@ -3,6 +3,12 @@
 ## v5.0.2 (Sep 13th, 2022)
 
 ```shell
+# ipfabric-5-0-2+5.ova
+QCOW SHA256: ebe63a21be1a1a8d0bf5897f8c8887b732505f2c4a1afc94fc779752f4c968b0
+QCOW MD5: c151ad5e9b028c29c88fc67b7007bdaa
+# ipfabric-5-0-2+5.qcow2
+TAR SHA256: 7ccd1e349ec8a77680db95637abc1699dfd1755a63d8075d37baece5cac9eb50
+TAR MD5: 65f2602ddbf5a8dc56d67eab430f13b1
 # ipfabric-update-5_0_2+5.tar.gz.sig
 TAR SHA256: 1dc0a59e2ec0993b9af2f7e26547caa791114ce5d49da32387effa00f11bbc95
 TAR MD5: 62518242728b95c08f5362ebcddec140
