--- a/docs/releases/release_notes/6.0.md
+++ b/docs/releases/release_notes/6.0.md
@@ -22,3 +22,4 @@ QCOW MD5: FIXME
 - Discovery bandwidth limit can be set up to 100Mb/s in UI.
 - The number of discovery workers running in parallel can be tuned, please contact the IP Fabric support team.
 - Cisco ASA, IOS, IOS-XE, NX-OS -- Added support for route maps and prefix-lists (IPv4 and IPv6)
+- Hostname parsing was improved, domain parsing was added (when applicable)
