--- a/docs/releases/release_notes/6.0.md
+++ b/docs/releases/release_notes/6.0.md
@@ -24,3 +24,7 @@ QCOW MD5: FIXME
 - Cisco ASA, IOS, IOS-XE, NX-OS -- Added support for route maps and prefix-lists (IPv4 and IPv6)
 - Hostname parsing was improved, domain parsing was added (when applicable)
 - Logical Devices -- Added a summary table of all discovered logical firewalls (contexts, vsys, VDOM) and Cisco Nexus VDCs.
+
+### Logging
+
+- JSON log files for all discovery services. Please note that these files can be several times (about 6x) larger than existing logs.
