SA-211: How to enable TLS 1.2

--- a/docs/releases/release_notes/5.0.md
+++ b/docs/releases/release_notes/5.0.md
@@ -233,6 +233,9 @@ IP Fabric `v5.0.0` includes Phase 1 of RBAC. The most significant change is that
 
     Any action on the CLI as a `root` and/or `autoboss` user may severely damage the product and/or the system itself. Such actions taken without direct communication with the IP Fabric Support or Solution Architect teams can render the system unusable.
 
+- All TLS version less than `v1.3` have been deprecated.
+  - Some older browsers, proxies, or systems may have issues connecting to IP Fabric after this change.
+  - To re-enable an older version please see [Custom TLS Settings](../../System_Administration/Command_Line_Interface/Custom_TLS.md) or contact your Solution Architect.
 - Boot Wizard Changes
   - For VM initial deployments where console access is not possible, it's now possible to run the boot wizard via SSH
     - Boot the VM, determine the IP address assigned to it from DHCP, and SSH to the VM: `ssh osadmin@<dhcp-learned-ip-address>`
