Add few more meta descriptions

--- a/docs/releases/release_notes/previous_releases/v3.x.x_ip_fabric.md
+++ b/docs/releases/release_notes/previous_releases/v3.x.x_ip_fabric.md
@@ -1,3 +1,7 @@
+---
+description: In this section, IP Fabric publishes previous version releases of the Platform v3.x
+---
+
 # IP Fabric v3.x.x
 
 ## 3.8.2 (1st July 2021)
