NIM-8996 - update release notes

--- a/docs/releases/release_notes/6.0.md
+++ b/docs/releases/release_notes/6.0.md
@@ -26,6 +26,7 @@ QCOW MD5: FIXME
 - On Palo Alto firewall new hostname format is used -- `hostname/vsysName` instead of `hostname/vsysId`.
 - Logical Devices -- Added a summary table of all discovered logical firewalls (contexts, vsys, VDOM) and Cisco Nexus VDCs.
 - AWS -- it is now possible to set multiple regions and assume roles in one configuration.
+- Huawei -- New OS version parsing. We now show more Huawei like OS versioning e.g. V800R021C00SPC100 instead of 8.210
 
 ### Logging
 
