--- a/docs/releases/low-level_release_notes/5.x/5.0.x/5.0.2.md
+++ b/docs/releases/low-level_release_notes/5.x/5.0.x/5.0.2.md
@@ -8,7 +8,7 @@ Anything what we considered an incorrect behavior. Something what was not workin
 
 - [NIM-7877](https://ipfabric.atlassian.net/browse/NIM-7877) -- High -- Intent Calculation failed for complex ZoneFW policies - ArangoDB cursor not found in reports
 - [NIM-8844](https://ipfabric.atlassian.net/browse/NIM-8844) -- Medium -- Downloading Configuration File "Unexpected Failure" - [ERR_CHILD_PROCESS_STDIO_MAXBUFFER]: stdout maxBuffer length exceeded
-- [NIM-8858](https://ipfabric.atlassian.net/browse/NIM-8858) -- Highest -- Resources consumption of Versa director
+- [NIM-8858](https://ipfabric.atlassian.net/browse/NIM-8858) -- Highest -- Resources consumption of Versa director (Versa API rate limiting)
 - [NIM-8907](https://ipfabric.atlassian.net/browse/NIM-8907) -- Medium -- Jumphost username restriction
 - [NIM-8988](https://ipfabric.atlassian.net/browse/NIM-8988) -- High -- Juniper Device info task failure
 - [DOS-721](https://ipfabric.atlassian.net/browse/DOS-721) -- Medium -- broken nimpeeMigrate while server using ipv6
