--- a/docs/releases/release_notes/6.0.md
+++ b/docs/releases/release_notes/6.0.md
@@ -13,6 +13,40 @@ QCOW SHA256: FIXME
 QCOW MD5: FIXME
 ```
 
+### Attributes
+
+You can now configure custom attributes for devices, this can be found under `Settings` --> `Device Attributes`.
+
+### RBAC
+
+You can now specify the level of access a user has by restricting the ability to use certain API Endpoints, or you can restrict which devices the user has access to via Device Attributes. New settings can be find under:
+
+- `Settings` --> `User Management` --> `Polices`
+- `Settings` --> `User Management` --> `Roles`
+
+### Assurance Engine
+
+- Assurance Engine is a new tab found under global and snapshot settings.
+- Users can now disable specific task to speed up discovery. You can toggle the following features from the Assurance Engine.
+  - Loading Graph Cache
+  - Save Historical Data
+  - Compute Intent Verification Rules
+
+### Changes to IP Fabric Appliance config wizard
+
+- Starting in 6.0, when setting the hostname in the config wizard, the hostname will follow [RFC1035 Section 2.3.1](https://www.rfc-editor.org/rfc/rfc1035#section-2.3.1) standards.
+
+```bnf
+<domain> ::= <subdomain> | " "
+<subdomain> ::= <label> | <subdomain> "." <label>
+<label> ::= <letter> [ [ <ldh-str> ] <let-dig> ]
+<ldh-str> ::= <let-dig-hyp> | <let-dig-hyp> <ldh-str>
+<let-dig-hyp> ::= <let-dig> | "-"
+<let-dig> ::= <letter> | <digit>
+<letter> ::= any one of the 52 alphabetic characters A through Z in upper case and a through z in lower case
+<digit> ::= any one of the ten digits 0 through 9
+```
+
 ### Network Discovery
 
 - Parallel command loading has been implemented for Cisco Meraki. This will significantly speed up discovery.
@@ -31,3 +65,7 @@ QCOW MD5: FIXME
 ### Logging
 
 - JSON log files for all discovery services. Please note that these files can be several times (about 6x) larger than existing logs.
+
+### EULA
+
+- Updated End User Licensing agreement (EULA). Current users may be asked to resign any existing EULA.
