Update LLRN to address comments at !273

--- a/docs/releases/low-level_release_notes/4.x/4.3.x/4.3.0.md
+++ b/docs/releases/low-level_release_notes/4.x/4.3.x/4.3.0.md
@@ -1,17 +1,17 @@
 # LLRN 4.3.0
 
-These are low-level release notes for IP Fabric release `4.3.0`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand we believe, that it can provide a valuable information, if you are looking for particular detail. This release of IP Fabric contains total of 496 issues. And was internally released on 2022-02-16.
+These are low-level release notes for IP Fabric release `4.3.0`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains total of 496 issues.
 
 ## Epics
 
-Epics are high-level features, which may consist of many tasks.
+Epics are high-level features, that may consist of many tasks.
 
 - [NIM-3294](https://ipfabric.atlassian.net/browse/NIM-3294) -- High -- Improve UX of handling app/network errors
 - [DOS-69](https://ipfabric.atlassian.net/browse/DOS-69) -- High -- Single-Sign-On (SSO) support via OpenID Connect (OIDC) in product
 
 ## Stories
 
-Stories are high-level features, which may consist of many tasks. These would typically cover large functionality in IP Fabric
+Stories are high-level features, that may consist of many tasks. These would typically cover extensive functionality in IP Fabric
 
 - [NIM-271](https://ipfabric.atlassian.net/browse/NIM-271) -- Low -- Improve diagrams by allowing custom edges and description boxes
 - [NIM-345](https://ipfabric.atlassian.net/browse/NIM-345) -- Medium -- Enable user to search for a specific ACL/Zone/Object rule
@@ -20,7 +20,7 @@ Stories are high-level features, which may consist of many tasks. These would ty
 
 ## Bugs
 
-Anything what we considered an incorrect behavior. Something what was not working as intended or turned out that does not meet customers demand.
+Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
 
 - [NIM-587](https://ipfabric.atlassian.net/browse/NIM-587) -- Medium -- Graph - walk save
 - [NIM-770](https://ipfabric.atlassian.net/browse/NIM-770) -- Lowest -- Empty Filter if Site column not visible
@@ -68,7 +68,7 @@ Anything what we considered an incorrect behavior. Something what was not workin
 
 ## Tasks
 
-A typical unit of work. They may be associated into Epics or Stories to form large features.
+Task may be associated into Epics or Stories to form complext features.
 
 - [NIM-16](https://ipfabric.atlassian.net/browse/NIM-16) -- Medium -- Table reports display the results as radar chart or bar chart
 - [NIM-256](https://ipfabric.atlassian.net/browse/NIM-256) -- Medium -- Configure email settings
