--- a/docs/releases/low-level_release_notes/4.x/4.4.x/4.4.0.md
+++ b/docs/releases/low-level_release_notes/4.x/4.4.x/4.4.0.md
@@ -1,22 +1,22 @@
 # LLRN 4.4.0
 
-These are low-level release notes for IP Fabric release `4.4.0`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand we believe, that it can provide a valuable information, if you are looking for particular detail. This release of IP Fabric contains total of 195 issues. And was internally released on 2022-04-11.
+These are low-level release notes for IP Fabric release `4.4.0`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains total of 195 issues.
 
 ## Epics
 
-Epics are high-level features, which may consist of many tasks.
+Epics are high-level features, that may consist of many tasks.
 
 - [NIM-7020](https://ipfabric.atlassian.net/browse/NIM-7020) -- High -- Viptela - cEdge fixes
 
 ## Stories
 
-Stories are high-level features, which may consist of many tasks. These would typically cover large functionality in IP Fabric
+Stories are high-level features, that may consist of many tasks. These would typically cover extensive functionality in IP Fabric
 
 - [NIM-7061](https://ipfabric.atlassian.net/browse/NIM-7061) -- Medium -- Case insensitive equal filter
 
 ## Bugs
 
-Anything what we considered an incorrect behavior. Something what was not working as intended or turned out that does not meet customers demand.
+Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
 
 - [NIM-5094](https://ipfabric.atlassian.net/browse/NIM-5094) -- Medium -- XDP Endpoints show network devices as endpoints
 - [NIM-5466](https://ipfabric.atlassian.net/browse/NIM-5466) -- Highest -- Vendor API - correct error msg
@@ -57,7 +57,7 @@ Anything what we considered an incorrect behavior. Something what was not workin
 
 ## Tasks
 
-A typical unit of work. They may be associated into Epics or Stories to form large features.
+Task may be associated into Epics or Stories to form complext features.
 
 - [NIM-2989](https://ipfabric.atlassian.net/browse/NIM-2989) -- High -- Improve Support MATRIX portal
 - [NIM-4597](https://ipfabric.atlassian.net/browse/NIM-4597) -- Medium -- Extreme feature request for Extreme
