--- a/docs/releases/low-level_release_notes/5.x/5.0.x/5.0.0.md
+++ b/docs/releases/low-level_release_notes/5.x/5.0.x/5.0.0.md
@@ -1,10 +1,10 @@
 # LLRN 5.0.0
 
-These are low-level release notes for IP Fabric release `5.0.0`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand we believe, that it can provide a valuable information, if you are looking for particular detail. This release of IP Fabric contains total of 606 issues. And was internally released on 2022-07-12.
+These are low-level release notes for IP Fabric release `5.0.0`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains total of 606 issues.
 
 ## Epics
 
-Epics are high-level features, which may consist of many tasks.
+Epics are high-level features, that may consist of many tasks.
 
 - [NIM-6756](https://ipfabric.atlassian.net/browse/NIM-6756) -- High -- Upgrade node to version 16 (kw: nodejs)
 - [NIM-7098](https://ipfabric.atlassian.net/browse/NIM-7098) -- Medium -- Optimize validation in Cisco command folder
@@ -15,13 +15,13 @@ Epics are high-level features, which may consist of many tasks.
 
 ## Stories
 
-Stories are high-level features, which may consist of many tasks. These would typically cover large functionality in IP Fabric
+Stories are high-level features, that may consist of many tasks. These would typically cover extensive functionality in IP Fabric
 
 - [NIM-6329](https://ipfabric.atlassian.net/browse/NIM-6329) -- Highest -- Structured logging and detailed access logs (syslog)
 
 ## Bugs
 
-Anything what we considered an incorrect behavior. Something what was not working as intended or turned out that does not meet customers demand.
+Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
 
 - [NIM-250](https://ipfabric.atlassian.net/browse/NIM-250) -- Highest -- Hide authentication password better
 - [NIM-5243](https://ipfabric.atlassian.net/browse/NIM-5243) -- Medium -- Inconsistent align top button and ungrouped host icons
@@ -65,7 +65,7 @@ Anything what we considered an incorrect behavior. Something what was not workin
 
 ## Tasks
 
-A typical unit of work. They may be associated into Epics or Stories to form large features.
+Task may be associated into Epics or Stories to form complext features.
 
 - [NIM-2361](https://ipfabric.atlassian.net/browse/NIM-2361) -- Medium -- Deleting a report leaves forever unused data in the DB
 - [NIM-2371](https://ipfabric.atlassian.net/browse/NIM-2371) -- Highest -- Tunnels table
