--- a/docs/releases/low-level_release_notes/5.x/5.0.x/5.0.1.md
+++ b/docs/releases/low-level_release_notes/5.x/5.0.x/5.0.1.md
@@ -1,16 +1,16 @@
 # LLRN 5.0.1
 
-These are low-level release notes for IP Fabric release `5.0.1`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand we believe, that it can provide a valuable information, if you are looking for particular detail. This release of IP Fabric contains total of 70 issues. And was internally released on 2022-08-02.
+These are low-level release notes for IP Fabric release `5.0.1`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains total of 70 issues.
 
 ## Epics
 
-Epics are high-level features, which may consist of many tasks.
+Epics are high-level features, that may consist of many tasks.
 
 - [DOS-677](https://ipfabric.atlassian.net/browse/DOS-677) -- Medium -- release 5.0.1
 
 ## Bugs
 
-Anything what we considered an incorrect behavior. Something what was not working as intended or turned out that does not meet customers demand.
+Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
 
 - [NIM-4387](https://ipfabric.atlassian.net/browse/NIM-4387) -- High -- Remove eDuplicit table and queries
 - [NIM-6936](https://ipfabric.atlassian.net/browse/NIM-6936) -- High -- When MDPS is enabled on CP firewalls, we fail to discover them
@@ -49,7 +49,7 @@ Anything what we considered an incorrect behavior. Something what was not workin
 
 ## Tasks
 
-A typical unit of work. They may be associated into Epics or Stories to form large features.
+Task may be associated into Epics or Stories to form complext features.
 
 - [NIM-8187](https://ipfabric.atlassian.net/browse/NIM-8187) -- Medium -- Cisco FabricPath implementation
 - [NIM-8585](https://ipfabric.atlassian.net/browse/NIM-8585) -- Medium -- Fortinet NAT Discovery logic issue
