--- a/docs/releases/low-level_release_notes/6.x/6.0.x/6.0.0.md
+++ b/docs/releases/low-level_release_notes/6.x/6.0.x/6.0.0.md
@@ -1,10 +1,10 @@
 # LLRN 6.0.0
 
-These are low-level release notes for IP Fabric release `6.0.0`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand we believe, that it can provide a valuable information, if you are looking for particular detail. This release of IP Fabric contains total of 579 issues. And was internally released on 2022-11-14.
+These are low-level release notes for IP Fabric release `6.0.0`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains total of 579 issues.
 
 ## Epics
 
-Epics are high-level features, which may consist of many tasks.
+Epics are high-level features, that may consist of many tasks.
 
 - [NIM-4425](https://ipfabric.atlassian.net/browse/NIM-4425) -- Medium -- cisco sg commands fixing (mother of all cisco sg fixes)
 - [NIM-7949](https://ipfabric.atlassian.net/browse/NIM-7949) -- High -- Role-based access control (RBAC) - Phase 2
@@ -13,7 +13,7 @@ Epics are high-level features, which may consist of many tasks.
 
 ## Stories
 
-Stories are high-level features, which may consist of many tasks. These would typically cover large functionality in IP Fabric
+Stories are high-level features, that may consist of many tasks. These would typically cover extensive functionality in IP Fabric
 
 - [NIM-4433](https://ipfabric.atlassian.net/browse/NIM-4433) -- Medium -- Virtual contexts table (initial implementation)
 - [NIM-5648](https://ipfabric.atlassian.net/browse/NIM-5648) -- Medium -- Route Maps on Cisco
@@ -28,7 +28,7 @@ Stories are high-level features, which may consist of many tasks. These would ty
 
 ## Bugs
 
-Anything what we considered an incorrect behavior. Something what was not working as intended or turned out that does not meet customers demand.
+Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
 
 - [NIM-5522](https://ipfabric.atlassian.net/browse/NIM-5522) -- Medium -- Bugfix: commands/aws/_ec2/describeVpnConnections
 - [NIM-5864](https://ipfabric.atlassian.net/browse/NIM-5864) -- Medium -- AWS routingTable - add support for routes with prefix lists
@@ -61,7 +61,7 @@ Anything what we considered an incorrect behavior. Something what was not workin
 
 ## Tasks
 
-A typical unit of work. They may be associated into Epics or Stories to form large features.
+Task may be associated into Epics or Stories to form complext features.
 
 - [NIM-56](https://ipfabric.atlassian.net/browse/NIM-56) -- Low -- UI Dashboard - Add widget / Intent verifications - Add placeholder
 - [NIM-2473](https://ipfabric.atlassian.net/browse/NIM-2473) -- High -- Interface Tunnels
