--- a/docs/releases/low-level_release_notes/4.x/4.3.x/4.3.2.md
+++ b/docs/releases/low-level_release_notes/4.x/4.3.x/4.3.2.md
@@ -1,10 +1,10 @@
 # LLRN 4.3.2
 
-These are low-level release notes for IP Fabric release `4.3.2`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand we believe, that it can provide a valuable information, if you are looking for particular detail. This release of IP Fabric contains total of 15 issues. And was internally released on 2022-02-23.
+These are low-level release notes for IP Fabric release `4.3.2`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains total of 15 issues.
 
 ## Bugs
 
-Anything what we considered an incorrect behavior. Something what was not working as intended or turned out that does not meet customers demand.
+Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
 
 - [NIM-7257](https://ipfabric.atlassian.net/browse/NIM-7257) -- Medium -- HP Aruba CX Logging - fix parsing of persistent storage
 - [NIM-7267](https://ipfabric.atlassian.net/browse/NIM-7267) -- Highest -- 4.3.0 OVA build failed
@@ -21,7 +21,7 @@ Anything what we considered an incorrect behavior. Something what was not workin
 
 ## Tasks
 
-A typical unit of work. They may be associated into Epics or Stories to form large features.
+Task may be associated into Epics or Stories to form complext features.
 
 - [NIM-7145](https://ipfabric.atlassian.net/browse/NIM-7145) -- Medium -- CheckPoint apiUid - make it less strict
 - [NIM-7212](https://ipfabric.atlassian.net/browse/NIM-7212) -- High -- Use new Meraki vendor API client
