--- a/docs/releases/low-level_release_notes/4.x/4.3.x/4.3.4.md
+++ b/docs/releases/low-level_release_notes/4.x/4.3.x/4.3.4.md
@@ -1,10 +1,10 @@
 # LLRN 4.3.4
 
-These are low-level release notes for IP Fabric release `4.3.4`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand we believe, that it can provide a valuable information, if you are looking for particular detail. This release of IP Fabric contains total of 28 issues. And was internally released on 2022-03-07.
+These are low-level release notes for IP Fabric release `4.3.4`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains total of 28 issues.
 
 ## Bugs
 
-Anything what we considered an incorrect behavior. Something what was not working as intended or turned out that does not meet customers demand.
+Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
 
 - [NIM-6871](https://ipfabric.atlassian.net/browse/NIM-6871) -- High -- Cannot load snapshot - F5 related issue
 - [NIM-7255](https://ipfabric.atlassian.net/browse/NIM-7255) -- Medium -- ID seems to be required to create SiteSeparation rules
@@ -34,7 +34,7 @@ Anything what we considered an incorrect behavior. Something what was not workin
 
 ## Tasks
 
-A typical unit of work. They may be associated into Epics or Stories to form large features.
+Task may be associated into Epics or Stories to form complext features.
 
 - [NIM-7099](https://ipfabric.atlassian.net/browse/NIM-7099) -- Medium -- Cisco _aci folder
 - [NIM-7379](https://ipfabric.atlassian.net/browse/NIM-7379) -- Medium -- Failing -4.1.0 end-to-end path-lookup test
