--- a/docs/releases/low-level_release_notes/4.x/4.4.x/4.4.3.md
+++ b/docs/releases/low-level_release_notes/4.x/4.4.x/4.4.3.md
@@ -1,10 +1,10 @@
 # LLRN 4.4.3
 
-These are low-level release notes for IP Fabric release `4.4.3`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand we believe, that it can provide a valuable information, if you are looking for particular detail. This release of IP Fabric contains total of 7 issues. And was internally released on 2022-05-27.
+These are low-level release notes for IP Fabric release `4.4.3`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains total of 7 issues.
 
 ## Bugs
 
-Anything what we considered an incorrect behavior. Something what was not working as intended or turned out that does not meet customers demand.
+Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
 
 - [NIM-7934](https://ipfabric.atlassian.net/browse/NIM-7934) -- High -- Low Level Design Report is not having EoL dates correct
 - [NIM-7935](https://ipfabric.atlassian.net/browse/NIM-7935) -- High -- E2E path not correct over Viptela
@@ -15,6 +15,6 @@ Anything what we considered an incorrect behavior. Something what was not workin
 
 ## Tasks
 
-A typical unit of work. They may be associated into Epics or Stories to form large features.
+Task may be associated into Epics or Stories to form complext features.
 
 - [NIM-7885](https://ipfabric.atlassian.net/browse/NIM-7885) -- High -- Juniper SRX empty Zone FW table
